--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,9 +11,7 @@
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "host_permissions": ["<all_urls>"],
   "permissions": [
     "history",
     "alarms",
@@ -28,26 +26,16 @@
     "geolocation"
   ],
   "externally_connectable": {
-    "matches": [
-      "https://d-frame-user-dashboard.vercel.app/*"
-    ]
+    "matches": ["http://localhost:3001/*"]
   },
   "icons": {
     "128": "icon-128.png"
   },
   "content_scripts": [
     {
-      "matches": [
-        "http://*/*",
-        "https://*/*",
-        "<all_urls>"
-      ],
-      "js": [
-        "contentScript.bundle.js"
-      ],
-      "css": [
-        "content.styles.css"
-      ]
+      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "js": ["contentScript.bundle.js"],
+      "css": ["content.styles.css"]
     }
   ],
   "devtools_page": "devtools.html",
@@ -61,10 +49,7 @@
         "icon-128.png",
         "icon-34.png"
       ],
-      "matches": [
-        "https://*/*",
-        "http://*/*"
-      ]
+      "matches": ["https://*/*", "http://*/*"]
     }
   ]
 }
