--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hot-loader": "^4.13.0",
     "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "web3": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
