--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,7 +23,12 @@
     "downloads",
     "webRequest",
     "scripting",
-    "geolocation"
+    "geolocation",
+    "https://metamask.io/",
+    "activeTab",
+    "storage",
+    "scripting",
+    "webNavigation"
   ],
   "externally_connectable": {
     "matches": ["http://localhost:3001/*"]
@@ -46,6 +51,7 @@
     {
       "resources": [
         "content.styles.css, contentScript.bundle.js",
+        "background.bundle.js",
         "icon-128.png",
         "icon-34.png"
       ],
